# ros2_lyrical_fundamentals

./: CMakeLists.txt  README.md  package.xml
ros2_fundamentals_examples/: __init__.py  py_minimal_publisher.py  py_minimal_subscriber.py
scripts/: minimal_pub_sub_launch.sh
src/: cpp_minimal_publisher.cpp  cpp_minimal_subscriber.cpp
test/gtest/: test_publisher.cpp
test/pytest/: test_publisher.py
